objects/einsteinplay__Einstein_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>einsteinplay__CertName__c</fullName>
        <description>the Salesforce name of your security certificate.  (PKS method)</description>
        <inlineHelpText>the Salesforce name of your security certificate</inlineHelpText>
        <label>CertName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>einsteinplay__Einstein_EMail__c</fullName>
        <label>Einstein EMail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>einsteinplay__FeatureCode__c</fullName>
        <inlineHelpText>Only enter values in this field if instructed to do so by Salesforce</inlineHelpText>
        <label>FeatureCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>einsteinplay__Secret_Key__c</fullName>
        <label>Secret Key</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>einsteinplay__certificate_part_1__c</fullName>
        <label>certificate part 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>einsteinplay__certificate_part_2__c</fullName>
        <label>certificate part 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>einsteinplay__certificate_part_3__c</fullName>
        <label>certificate part 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Einstein Settings</label>
</CustomObject>